2000-03-21  Ulrich Drepper  <drepper@redhat.com>

	* include/shlib-compat.h (versioned_symbol): Give preprocessor the
	chance to expand VERSION_##lib##_##version.

2000-03-21  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/sparc/bits/sigcontext.h: Clean up namespace.
	Lay out struct sigcontext according to what really gets passed on
	the stack.
	* sysdeps/unix/sysv/linux/sparc/sys/procfs.h: Don't include asm/elf.h.
	(elf_gregset_t, elf_greg_t, elf_fpregset_t, ELF_NGREG): Define.
	(prgregset_t, prfpregset_t): Define to elf_* types.
	* sysdeps/unix/sysv/linux/sparc/sys/ptrace.h (PTRACE_WRITEDATA):
	Define to correct value.
	* sysdeps/unix/sysv/linux/sparc/sparc32/profil-counter.h: Use struct
	sigcontext.
	* sysdeps/unix/sysv/linux/sparc/sparc32/sigcontextinfo.h: Likewise.

2000-03-21  Roland McGrath  <roland@baalperazim.frob.com>

	* scripts/firstversions.awk: Allow multiple version sets in the
	"earliest version" specification, meaning that version sets in the
	gaps between listed versions should be folded into the earliest later
	version that is explicitly listed.
	* shlib-versions (mips.*-.*-linux.*): Use that syntax for to say
	we support GLIBC_2.0 and GLIBC_2.2 but not the intervening sets.

2000-03-21  Ulrich Drepper  <drepper@redhat.com>

	* iconv/gconv_builtin.c: Include <endian.h>.
	* iconv/gconv_builtin.h: Add UCS-BE aliases.
	Add UCS-4LE transformation.  Define UNICODEBIG and UNICODELITTLE
	according to current platform.
	* iconv/gconv_int.h: Declare __gconv_transform_ucs2reverse_internal,
	__gconv_transform_internal_ucs2reverse, and
	__gconv_transform_internal_ucs4le.
	* iconv/gconv_simple.c: Implement __gconv_transform_internal_ucs4le,
	__gconv_transform_ucs2reverse_internal and
	__gconv_transform_internal_ucs2reverse.
	* iconvdata/Makefile (modules): Add UNICODE.
	(distribute): Add unicode.c.
	* iconvdata/gconv-modules: Add definitions for UNICODE module.
	* iconvdata/unicode.c: New file.
