@@ -1,4 +1,4 @@
-/* Copyright (C) 1993, 1995, 1997, 1998, 1999 Free Software Foundation, Inc.
+/* Copyright (C) 1993,1995,1997,1998,1999,2000 Free Software Foundation, Inc.
    This file is part of the GNU IO Library.
 
    This library is free software; you can redistribute it and/or
@@ -22,6 +22,9 @@
    Public License.  This exception does not however invalidate any
    other reasons why the executable file might be covered by the GNU
    General Public License.  */
+
+#include <shlib-compat.h>
+#if SHLIB_COMPAT (libc, GLIBC_2_0)
 
 #define _IO_USE_OLD_IO_FILE
 #include "libioP.h"
@@ -66,3 +69,5 @@ _IO_old_fclose (fp)
 strong_alias (_IO_old_fclose, __old_fclose)
 symbol_version (_IO_old_fclose, _IO_fclose, GLIBC_2.0);
 symbol_version (__old_fclose, fclose, GLIBC_2.0);
+
+#endif
