@@ -1,3 +1,8 @@
+2000-03-21  Ulrich Drepper  <drepper@redhat.com>
+
+	* pthread.c (pthread_initialize): Test for address of __dso_handle
+	being NULL, not value.  Use __on_exit, not on_exit.
+
 2000-03-19  Ulrich Drepper  <drepper@redhat.com>
 
 	* pthread.c (pthread_initialize): Instead of on_exit use
